--- a/cliente/src/index.html
+++ b/cliente/src/index.html
@@ -10,8 +10,8 @@
 
  <script type="text/javascript" src="assets/js/jquery-min.js"></script>
  <script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>
- <link rel="stylesheet" href="assets/css/bootstrap.min.ccs"><link>
- <link rel="stylesheet" href="assets/css/styles.ccs"><link>
+ <link rel="stylesheet"  type="text/html" href="assets/css/bootstrap.min.ccs"><link>
+ <link rel="stylesheet"  type="text/html" href="assets/css/styles.ccs"><link>
 </head>
 <body>
   <app-root></app-root>
